Fix select option not being visible

--- a/src/Game/components/GameSettings/styles.scss
+++ b/src/Game/components/GameSettings/styles.scss
@@ -149,7 +149,7 @@
       background-color: rgba(0, 0, 0, 0);
       color: white;
 
-      setting {
+      option {
         color: black;
       }
     }
